<resources>
    <string name="app_name">qPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johndoe@qpay.mk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">qPay</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manage_credit_cards">Credit Cards</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_logout">Logout</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="recent_transactions">Recent transactions:</string>
    <string name="monthly_statistics">Monthly statistics</string>
    <string name="merchant">Merchant: %s</string>
    <string name="amount">Amount: %sden</string>
    <string name="credit_cards">Credit cards:</string>
    <string name="choose_a_card">Choose a card:</string>
    <string name="review_transaction">Review transaction</string>
    <string name="merchant_name">Merchant:</string>
    <string name="merchant_category">Category:</string>
    <string name="payment_total_amount">Total amount:</string>
    <string name="show_details">Show details</string>
    <string name="choose_payment_card">Pay with</string>
    <string name="credit_card_number">**** **** **** %s</string>
    <string name="change">Change</string>
    <string name="approve">Pay</string>
    <string name="success_transaction">Your <b>%s *** **** **** %s with QPay</b> was successfully charged.</string>
    <string name="error_transaction">Your transaction was canceled or did not complete successfully.</string>
    <string name="payment_completed_successfully">Payment Completed Successfully!</string>
    <string name="payment_completed_error">Payment was successfully canceled!</string>
    <string name="try_again">Try again</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="done">Done</string>

</resources>