<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/transactionsFragment"
            android:icon="@drawable/ic_transactions"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/manageCreditCardsFragment"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_manage_credit_cards" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_logout" />
    </group>

</menu>