<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transaction"
            type="mk.grabit.gpay.data.model.Transaction" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:elevation="20dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_review_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/review_transaction"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:background="?colorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/label_review_transaction" />

                <TextView
                    android:id="@+id/label_merchant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/merchant_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{transaction.merchant.name}"
                    app:layout_constraintBottom_toBottomOf="@id/label_merchant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/label_merchant"
                    tools:text="GOLD CAFE" />

                <TextView
                    android:id="@+id/label_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/merchant_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_merchant" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{transaction.merchant.category}"
                    app:layout_constraintBottom_toBottomOf="@id/label_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/label_category"
                    tools:text="Food $ Drinks" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="?colorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/label_category" />

                <TextView
                    android:id="@+id/label_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/payment_total_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view2" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{String.valueOf(transaction.amount) + `den`}"
                    app:layout_constraintBottom_toBottomOf="@id/label_amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/label_amount"
                    tools:text="$2.00" />

                <TextView
                    android:id="@+id/show_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/show_details"
                    android:textColor="@color/blue_300"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amount" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:background="?colorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/show_details" />

                <TextView
                    android:id="@+id/label_pay_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/choose_payment_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view3" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toTopOf="@id/cancel_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_pay_with"
                    app:layout_constraintVertical_bias="0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white_50">

                        <ImageView
                            android:id="@+id/card_image_view"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/mastercard_logo"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/card_number"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/card_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toStartOf="@id/change_card"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/card_image_view"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Mastercard" />

                        <TextView
                            android:id="@+id/card_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/credit_card_number"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/change_card"
                            app:layout_constraintTop_toBottomOf="@id/card_type" />

                        <TextView
                            android:id="@+id/change_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:text="@string/change"
                            android:textColor="@color/blue_300"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="#980000"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/approve_button"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/approve_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="#43A643"
                    android:text="@string/approve"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cancel_button" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/buttonsGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="approve_button, cancel_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/card_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fillViewport="true"
            android:visibility="gone"
            app:behavior_hideable="true"
            app:behavior_peekHeight="250dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DDD"
                app:cardCornerRadius="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="16dp"
                        android:text="@string/choose_a_card"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/card_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/label_title"
                        tools:listitem="@layout/credit_card_item" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>