<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="mk.grabit.gpay.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_barcodeFragment"
            app:destination="@id/barcodeFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="mk.grabit.gpay.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="mk.grabit.gpay.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" >
        <action
            android:id="@+id/action_transactionsFragment_to_transactionDetailsFragment"
            app:destination="@id/transactionDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="mk.grabit.gpay.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_home_fragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/barcodeFragment"
        android:name="mk.grabit.gpay.ui.barcode.BarcodeFragment"
        android:label="BarcodeFragment"
        tools:layout="@layout/fragment_barcode">
        <action
            android:id="@+id/action_barcodeFragment_to_paymentFragment"
            app:destination="@id/paymentFragment"
            app:popUpTo="@id/barcodeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_barcodeFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/barcodeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/manageCreditCardsFragment"
        android:name="mk.grabit.gpay.ui.creditcards.ManageCreditCardsFragment"
        android:label="ManageCreditCardsFragment"
        tools:layout="@layout/fragment_manage_credit_cards"/>
    <fragment
        android:id="@+id/transactionDetailsFragment"
        android:name="mk.grabit.gpay.ui.transactions.details.TransactionDetailsFragment"
        android:label="TransactionDetailsFragment"
        tools:layout="@layout/fragment_transaction_details">
        <argument
            android:name="transactionId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="mk.grabit.gpay.ui.barcode.payment.PaymentFragment"
        android:label="PaymentFragment"
        tools:layout="@layout/fragment_payment">
        <action
            android:id="@+id/action_paymentFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/paymentFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>